force-app/main/default/objects/ADM_Release_Event_Template__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Application to which this Release Event Item applies</inlineHelpText>
    <label>Application</label>
    <referenceTo>ADM_Application__c</referenceTo>
    <relationshipLabel>Release Event Templates</relationshipLabel>
    <relationshipName>Release_Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>