force-app/main/default/objects/ADM_Release_Event_Template__c/fields/Base_Event__c.field-meta.xml
<CustomField>
    <fullName>Base_Event__c</fullName>
    <description>This field indicates whether the Release Event is a &quot;Base&quot; event, that is, the event happens at the time indicated by the Release record&#39;s Scheduled Release Date.</description>
    <formula>IF(Day_Offset__c = 0 &amp;&amp;  Event_Duration__c = 0 &amp;&amp; ISBLANK(Start_Time__c) &amp;&amp; 
Minute_Offset__c =0 &amp;&amp;  Hour_Offset__c = 0, &quot;BASE EVENT&quot;, &quot;&quot;)</formula>
    <label>Base Event</label>
    <type>Text</type>
</CustomField>