force-app/main/default/objects/ADM_Release_Event_Template__c/fields/Event_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Template_Name__c</fullName>
    <description>Name of the Release Event Template</description>
    <inlineHelpText>Enter a name for the Release Event Template</inlineHelpText>
    <label>Event Template Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>