force-app/main/default/objects/ADM_Release_Event_Template__c/fields/Hour_Offset__c.field-meta.xml
<CustomField>
    <fullName>Hour_Offset__c</fullName>
    <inlineHelpText>Number of hours that this event item is offset from the Scheduled Release Date. Note: Either Start Time or Hour and Minute Offset can be used.</inlineHelpText>
    <label>Hour Offset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>