force-app/main/default/objects/ADM_Release_Event_Template__c/fields/Instance_Key_Verification__c.field-meta.xml
<CustomField>
    <fullName>Instance_Key_Verification__c</fullName>
    <inlineHelpText>The result from evaluating the Test Instance List using the Instance Key are displayed in this field when this record is saved.</inlineHelpText>
    <label>Instance Key Verification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>