force-app/main/default/objects/ADM_Release_Event_Template__c/fields/Test_Instance_List__c.field-meta.xml
<CustomField>
    <fullName>Test_Instance_List__c</fullName>
    <defaultValue>&quot;CS3 CS4 CS7 CS9 CS11 CS12 CS13 CS14 CS15 CS17 CS19 CS20 CS21 CS23 CS25 CS26 CS27 CS28 CS30 CS32 CS41 CS42 CS44 CS45 CS51 CS80 CS83 CS87 SR1 SR2 CS5 CS31 NA1 GS0 NA6 NA7 NA8 NA9 NA17 NA18 NA22 NA29 NA31 EU5 EU0 EU1 EU2 EU3 EU4 EU6 CS81 NA0 NA2 NA3 NA4 NA5 NA10 NA11 NA12 NA13 NA14 NA15 NA16 NA19 NA20 NA21 NA23 NA24 NA25 NA26 NA27 NA34 NA41 AP0 AP1 AP2 AP3 CS1 CS2 CS6 CS8 CS10 CS16 CS18 CS22 CS24 CS33 CS40 CS43 CS50 CS52&quot;</defaultValue>
    <description>Test string of instance names to be used to validate the Instance Key field</description>
    <inlineHelpText>Test string used for validation of Instance Key field. This field can be changed to test the Instance Key on other instance lists. Instance Key Verification field is set when this record is updated.</inlineHelpText>
    <label>Test Instance List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>