force-app/main/default/objects/ADM_Release_Event_Template__c/validationRules/Application_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Application__c)</errorConditionFormula>
    <errorDisplayField>Application__c</errorDisplayField>
    <errorMessage>Application must be specified.</errorMessage>
</ValidationRule>