force-app/main/default/objects/ADM_Release_Event_Template__c/validationRules/Event_Duration_must_be_nonnegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Duration_must_be_nonnegative</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Duration__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Event_Duration__c</errorDisplayField>
    <errorMessage>Event Duration cannot be less than zero.</errorMessage>
</ValidationRule>