force-app/main/default/objects/ADM_Release_Event_Template__c/validationRules/No_Hour_Offset_when_using_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Hour_Offset_when_using_Start_Time</fullName>
    <active>true</active>
    <description>When Start Time is being used, Hour Offset cannot be specified.</description>
    <errorConditionFormula>NOT(ISBLANK(Hour_Offset__c)) &amp;&amp; NOT(ISBLANK(Start_Time__c))</errorConditionFormula>
    <errorDisplayField>Hour_Offset__c</errorDisplayField>
    <errorMessage>When Start Time is being used, Hour Offset cannot be specified. Either clear Start Time or set  Hours Offset  to blank.</errorMessage>
</ValidationRule>