force-app/main/default/objects/ADM_Release_Event_Template__c/validationRules/No_Start_Time_when_using_offset.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Start_Time_when_using_offset</fullName>
    <active>true</active>
    <description>When an offset is set for either hours or minutes, Start Time cannot be specified.</description>
    <errorConditionFormula>NOT(ISBLANK(Start_Time__c)) &amp;&amp;  
(NOT(ISBLANK(Hour_Offset__c)) ||  NOT(ISBLANK(Minute_Offset__c)))</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>When an offset is set for either hours or minutes, Start Time cannot be specified. Either clear both Hours Offset and Minutes Offset or set Start Time to blank.</errorMessage>
</ValidationRule>