force-app/main/default/objects/ADM_Release_Event_Template__c/validationRules/Offset_or_StartTime_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Offset_or_StartTime_must_be_specified</fullName>
    <active>true</active>
    <description>Either Hours/Minutes Offset must be specified or Start Time must be specified.</description>
    <errorConditionFormula>ISBLANK(Hour_Offset__c) &amp;&amp; ISBLANK(Minute_Offset__c) &amp;&amp; ISBLANK(Start_Time__c)</errorConditionFormula>
    <errorMessage>Either Hours/Minutes Offset must be specified or Start Time must be specified.</errorMessage>
</ValidationRule>