force-app/main/default/objects/ADM_Release_Event_Template__c/validationRules/Start_Time_must_be_in_12h_time_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_must_be_in_12h_time_format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Start_Time__c)) &amp;&amp; NOT(REGEX(Start_Time__c, &quot;^(([0][0-9]|[1][0-2])|[0-9]):([0-5][0-9])( *)((AM|PM)|(A|P))$&quot;))</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Time value must be formatted HH:MM AM or HH:MM PM (based on as 12 hour clock).</errorMessage>
</ValidationRule>